* 2008-02-05 - marcus.klein@open-xchange.com

 - Bugfix #10887: Removed context object from session interface to be able to
   update the server bundle without complete restart.

* 2008-02-04 - thorben.betten@open-xchange.com

 - Bugfix #10886: Fixed NPE when searching mails

* 2008-02-01 - thorben.betten@open-xchange.com

 - Bugfix #10880: Although version information should ensure that an update
   task only runs once, table existence is checked prior to its creation in
   spell check's update task
 - Bugfix #10890: Properly connecting mail connection object prior to
   sending notification
 - Bugfix #10893: Setting '\Seen' flag when copying a mail message into
   'Sent' folder

* 2008-01-29 - marcus.klein@open-xchange.com

 - Bugfix #10767: Locking for thread safety of cached object improved to prevent
   performance issues if load method for cached object is slow.

* 2008-01-18 - thorben.betten@open-xchange.com

 - Bugfix #9111: Throwing an error if user tries to share a private folder
   whose name is equal to another shared folder of the same user.

* 2008-01-16 - marcus.klein@open-xchange.com

 - Bugfix #8411: Fixed completely missing recurrence rule in WebDAV iCal
   interface. 

* 2008-01-15 - sebastian.kauss@open-xchange.com

 - Bugfix: #10760: Missing recurrence attributes in appointment requests

* 2008-01-15 - thorben.betten@open-xchange.com

 - Preparations for bugfix #9111: Check for duplicate names when sharing a
   folder

* 2008-01-11 - sebastian.kauss@open-xchange.com

 - Bugfix #6960: Missing recurrence_id when deleting a 
   synchronized exception

 - Bugfix: #9734: add number_of_attachments and number_of_links to 
   json array (calendar, contacts, tasks)

 - Bugfix: #9742: Whole-day appointment series with two participants in
   different timezones not shown in dayview

* 2008-01-11 - thorben.betten@open-xchange.com

 - Bugfix #10691: Increased IMAP timeout settings for both initial socket
   connect and socket I/O