@@ -1,3 +1,7 @@
+* 2008-02-06 - francisco.laguna@open-xchange.com
+
+ - Attach iCal file to invitation emails to external participants.
+
 * 2008-02-05 - marcus.klein@open-xchange.com
 
  - Bugfix #10887: Removed context object from session interface to be able to
